--- a/myGym/my_config.json
+++ b/myGym/my_config.json
@@ -30,13 +30,13 @@
 "algo":"ppo2",
 "max_episode_steps":1024,
 "algo_steps":1024,
-"steps":2000000,
+"steps":500000,
 "pretrained_model":null,
 "multiprocessing":false,
 #Evaluation
-"eval_freq":50000,
+"eval_freq":100,
 "eval_episodes":10,
 #Saving and logging
-"logdir":"trained_models/switch_kw_01_kd_01_3d_plus_angle_reward",
+"logdir":"trained_models/switch_kw_01_kd_01_ka_01_3d",
 "record":0
 }
